# ho22bus

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.win32  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  ho22bus.1  ho22bus.desktop  hodict.desktop  readme.txt  reciteword-installer.nsi  reciteword.desktop  reciteword.dev  rwdict.desktop
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
books/: Makefile.am  Makefile.in
books/ho22bus/: Makefile.am  Makefile.in  cn-en.bok  dirname
books/ljjy/: Makefile.am  Makefile.in  dirname  dxclzhjy.bok  dxcxjy.bok  dxczjy.bok  dxdbjy.bok  dxlxjy.bok  zxcxjy.bok  zxczjy.bok  zxdbjy.bok  zxlxjy.bok
doc/: Makefile.am  Makefile.in  README  devel_10  devel_11  devel_12  devel_3  devel_4  devel_5  devel_7  devel_9  readme
doc/devel/: devel_1  devel_2  devel_6  devel_8
doc/usage/: know.zh_CN.txt  overview.txt  overview.zh_CN.txt  revise.zh_CN.txt  shooting.zh_CN.txt  typing.zh_CN.txt
po/: POTFILES.in  zh_CN.po
spec/: Makefile.am  Makefile.in  reciteword-books.spec  reciteword-dicts.spec  reciteword-skins-rw.spec  reciteword-skins-rw_en.spec  reciteword.spec
src/: Makefile.am  Makefile.in  about.cpp  about.h  bookfile.cpp  bookfile.h  choosebook.cpp  choosebook.h  chooseword.cpp  chooseword.h  collectword.cpp  collectword.h  configfile.cpp  configfile.h  dict.cpp  dict.h  firstrecite.cpp  firstrecite.h  firstrecite_test.cpp  firstrecite_test.h  help.cpp  help.h  intl.h  know.cpp  know.h  mark.cpp  mark.h  menu.cpp  menu.h  mydict.cpp  mydict.h  option.cpp  option.h  readword.cpp  readword.h  reciteword.cpp  reciteword.h  record.cpp  record.h  rest.cpp  (+21 more)
src/modules/: Makefile.am  Makefile.in  bookedit.zh_CN.txt  choosebook.zh_CN.txt  filling.zh_CN.txt  firstrecite.zh_CN.txt  hearing.zh_CN.txt  overview.txt  rest.zh_CN.txt  sentence.zh_CN.txt  wordedit.zh_CN.txt
src/skins/: Makefile.am  Makefile.in
src/skins/en/: Makefile.am  Makefile.in  skin.inf
src/skins/zh_CN/: Makefile.am  Makefile.in  gtkrc  skin.inf
src/tools/: Makefile.am  Makefile.in  aa.c  bdc.c  getBdcSound.c  trans_dic.py  verifyfile.c  wordlover.c  wyabdc.c
src/win32/: Makefile.am  Makefile.in
src/win32/nsis/: Makefile.am  Makefile.in
