## Process this file with automake to produce Makefile.in

SUBDIRS = po src doc spec

desktopdir = $(datadir)/applications
desktop_DATA = reciteword.desktop rwdict.desktop
pixmapdir = $(datadir)/pixmaps
pixmap_DATA = reciteword.png rwdict.png

EXTRA_DIST = autogen.sh reciteword.desktop rwdict.desktop reciteword.png rwdict.png \
	intltool-extract.in intltool-merge.in intltool-update.in \
	README.win32 readme.txt reciteword.dev reciteword.ico reciteword-uninst.ico reciteword-installer.nsi
