## Process this file with automake to produce Makefile.in

SUBDIRS = po src doc spec

desktopdir = $(datadir)/applications
desktop_DATA = ho22bus.desktop rwdict.desktop
pixmapdir = $(datadir)/pixmaps
pixmap_DATA = ho22bus.png rwdict.png

EXTRA_DIST = autogen.sh ho22bus.desktop rwdict.desktop ho22bus.png rwdict.png \
	intltool-extract.in intltool-merge.in intltool-update.in \
	readme.txt
