## Process this file with automake to produce Makefile.in

SUBDIRS = po src doc spec

desktopdir = $(datadir)/applications
desktop_DATA = ho22bus.desktop hodict.desktop
pixmapdir = $(datadir)/pixmaps
pixmap_DATA = ho22bus.png hodict.png

EXTRA_DIST = autogen.sh ho22bus.desktop hodict.desktop ho22bus.png hodict.png \
	intltool-extract.in intltool-merge.in intltool-update.in

man1_MANS = ho22bus.1
