EXTRA_DIST = answerno2.wav answerok.wav buttonactive.wav buttondown.wav chord.wav ding.wav gunok.wav \
	type.wav answerno.wav back.wav buttonup.wav gunno.wav wind.wav menushow.wav \
	overview.txt \
	bookedit.zh_CN.txt firstrecite.zh_CN.txt overview.zh_CN.txt sentence.zh_CN.txt wordedit.zh_CN.txt \
	choosebook.zh_CN.txt hearing.zh_CN.txt rest.zh_CN.txt shooting.zh_CN.txt \
	filling.zh_CN.txt know.zh_CN.txt revise.zh_CN.txt typing.zh_CN.txt


modulesdir = $(datadir)/reciteword/modules
modules_DATA = $(EXTRA_DIST)
