EXTRA_DIST = about.png collectword.png face.png help.png rest.png revise_skimr.png skim.png text.png \
	aboutr.png collectwordr.png facer.png helpr.png restr.png revise_test.png skimr.png typing.png \
	choosebook.png group.png know.png record.png recordr.png revise_group.png revise_testr.png skin.inf typingr.png \
	choosebookr.png dict.png groupr.png knowr.png revise_groupr.png shooting.png test.png \
	chooseword.png dictr.png gtkrc revise_skim.png shootingr.png testr.png mark.png markr.png

skinrwdir = $(datadir)/ho22bus/skins/en
skinrw_DATA = $(EXTRA_DIST)
