EXTRA_DIST = collectword.png face.png revise_skimr.png skim.png text.png \
	collectwordr.png facer.png revise_test.png skimr.png typing.png \
	choosebook.png group.png know.png record.png recordr.png revise_group.png revise_testr.png skin.inf typingr.png \
	choosebookr.png dict.png groupr.png knowr.png revise_groupr.png shooting.png test.png \
	chooseword.png dictr.png gtkrc revise_skim.png shootingr.png testr.png mark.png markr.png

skinrwdir = $(datadir)/$(PROGRAM_NAME)/skins/zh_CN
skinrw_DATA = $(EXTRA_DIST)
